src/components/collapse/Collapse.scss
@import '../../sass/main.scss';

.collapse {
    background-color: $color-tertiary;
    max-width: 1100px;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    margin: 0 auto;
    &_title{
        @include flex(row, space-between, center);
        background-color: $color-secondary;
        color: $color-primary;
        border-radius: 10px;
        font-weight: 500;
        font-size: clamp(13px, 2vw, 18px);
        padding: 10px 15px;
        cursor: pointer;
        .arrow{
            transition: all 0.2s ease-in-out;
        }
        .arrow_up {
            transform: rotate(0deg);
        }
        .arrow_down {
            transform: rotate(180deg);
        }
    }
    &_description {
        display: flex;
        flex-direction: column;
        gap: 5px;
        letter-spacing: 1px;
        visibility: visible;
        opacity: 1;
        height: auto;
        padding: 10px;
        letter-spacing: 1px;
        font-size: clamp(12px, 2vw, 16px);
        color: $color-secondary;
        transition: visibility 0.5s ease-in-out,
                    opacity 0.5s ease-in-out,
                    height 0.2s ease-in-out;
    }
    &_hidden_description {
        visibility: hidden;
        opacity: 0;
        height: 0;
    }
}

